# aws-sam-bedrock-app

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy.yml
functions/hello/: app.py
layer/: README.md  requirements.txt
openapi/: schema.yaml
scripts/: generate_types.py
shared/types/: models.py
tests/: conftest.py
tests/config/: dev.json
tests/integration/: conftest.py  test_api_gateway.py
tests/integration/hello/: test_handler.py
tests/unit/: conftest.py  test_hello_handler.py
tests/unit/hello/: test_handler.py
