[tool.poetry]
name = "aws-sam-bedrock-app"
version = "0.1.0"
description = ""
authors = ["Jumpei Motohashi <61613314+jumpei00@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
datamodel-code-generator = "^0.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
